Fix .about hidden in grid/masonry when only note or highlights are visible

--- a/src/co/bookmarks/item/view.module.styl
+++ b/src/co/bookmarks/item/view.module.styl
@@ -260,7 +260,7 @@
     }
 }
 
-:global(.hide-title.hide-excerpt.hide-tags.hide-info) {
+:global(.hide-title.hide-note.hide-excerpt.hide-highlights.hide-tags.hide-info) {
     .grid, .masonry {
         .about {
             display: none
